# ecommerce_fastapi

./: pyproject.toml
e_commerce_api/: .gitignore  authentication.py  emails.py  main.py  models.py
e_commerce_api/templates/: verification.html
